<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_profile">Profile</string>
    <string name="text_title_info_user">User information</string>
    <string name="text_title_name_user">Name</string>
    <string name="text_title_phone">Phone</string>
    <string name="text_title_email">Email</string>
    <string name="text_title_car">Car</string>
    <string name="text_title_brand_car">Car brand</string>
    <string name="text_title_model_car">Model</string>
    <string name="text_title_connector">Connector</string>
    <string name="message_info_about_profile">Missing car and user information</string>
    <string name="text_fill_button">FILL</string>
    <string name="logout">Logout</string>
    <string name="change_data">Change data</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="user_info">User information</string>
    <string name="add_data_about_user">Add user information</string>
    <string name="email">EMAIL</string>
    <string name="info_about_auto">Car information</string>
    <string name="choose_auto_brand">Choose car brand...</string>
    <string name="choose_auto_model">Choose model...</string>
    <string name="choose_socket">Choose sockets...</string>
    <string name="add">Add</string>
    <string name="you_logged_in">You successfully logged in</string>
    <string name="authorization_error">Authorization error</string>
    <string name="title_text_view">Application login</string>
    <string name="login_button">Login</string>
    <string name="cannot_change_data">Data cannot be changed now</string>
    <string name="enter_button">LOGIN</string>
    <string name="you_successfully_registered">You are successfully registered!</string>
    <string name="error">Error!</string>
    <string name="sockets">Sockets</string>
    <string name="enter_socket_name_hint">Enter socket name</string>
    <string name="remove_all">Remove all</string>
    <string name="choose">Choose</string>
</resources>