<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/title_profile_screen"
        style="@style/profile_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/text_title_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/empty_profile_info_bloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile_screen">

        <TextView
            android:id="@+id/message_info_tetxt_view"
            style="@style/profile_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_20"
            android:text="@string/message_info_about_profile"
            android:textSize="@dimen/text_size_message_info_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fill_info_profile_button"
            android:layout_width="@dimen/width_fill_info_button"
            android:layout_height="@dimen/height_fill_info_button"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_26"
            android:background="@color/color_bg_fill_profile_info_button"
            android:text="@string/text_fill_button"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title_info" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/full_profile_info_bloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile_screen">

        <TextView
            android:id="@+id/tile_info_user"
            style="@style/profile_section_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/text_title_info_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/info_user_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tile_info_user">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_background_card_view_profile">

                <TextView
                    android:id="@+id/title_name_user"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_14"
                    android:text="@string/text_title_name_user"
                    android:textColor="@color/text_color_titles_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_user_text_view"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:textColor="@color/text_color_infos_user"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Александр" />

                <View
                    android:id="@+id/border_view_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_card_view"
                    android:layout_marginHorizontal="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@color/background_border_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_user_text_view" />

                <TextView
                    android:id="@+id/title_phone_user"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_14"
                    android:text="@string/text_title_phone"
                    android:textColor="@color/text_color_titles_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_name" />

                <TextView
                    android:id="@+id/phone_user_text_view"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:textColor="@color/text_color_infos_user"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_name"
                    tools:text="+7 955 555-55-55" />

                <View
                    android:id="@+id/border_view_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_card_view"
                    android:layout_marginHorizontal="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@color/background_border_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_user_text_view" />

                <TextView
                    android:id="@+id/title_email_user"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:text="@string/text_title_email"
                    android:textColor="@color/text_color_titles_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_phone" />

                <TextView
                    android:id="@+id/email_user_text_view"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:textColor="@color/text_color_infos_user"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_phone"
                    tools:text="alex@gmail.com" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tile_info_car"
            style="@style/profile_section_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/text_title_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_user_card_view" />

        <androidx.cardview.widget.CardView
            android:id="@+id/info_car_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tile_info_car">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_background_card_view_profile">

                <TextView
                    android:id="@+id/title_brand_car"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_14"
                    android:text="@string/text_title_brand_car"
                    android:textColor="@color/text_color_titles_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/brand_car_text_view"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:textColor="@color/text_color_infos_user"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Tesla" />

                <View
                    android:id="@+id/border_view_brand"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_card_view"
                    android:layout_marginHorizontal="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@color/background_border_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/brand_car_text_view" />

                <TextView
                    android:id="@+id/title_model_car"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_14"
                    android:text="@string/text_title_model_car"
                    android:textColor="@color/text_color_titles_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_brand" />

                <TextView
                    android:id="@+id/model_car_text_view"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:textColor="@color/text_color_infos_user"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_brand"
                    tools:text="Model 3" />

                <View
                    android:id="@+id/border_view_model"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_view_card_view"
                    android:layout_marginHorizontal="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@color/background_border_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/model_car_text_view" />

                <TextView
                    android:id="@+id/title_connector_car"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:text="@string/text_title_connector"
                    android:textColor="@color/text_color_titles_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_model" />

                <TextView
                    android:id="@+id/connector_car_text_view"
                    style="@style/profile_points_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:textColor="@color/text_color_infos_user"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/border_view_model"
                    tools:text="CCS2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>